[lworld] runtime/valhalla/inlinetypes/InlineOops.java GenZ assertion on aarch64

XMLWordPrintable

    • aarch64

      runtime/valhalla/inlinetypes/InlineOops.java#id4

      # Internal Error (/opt/mach5/mesos/work_dir/slaves/cd627e65-f015-4fb1-a1d2-b6c9b8127f98-S119314/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2123954e-43aa-44ff-9459-148bf2f2db5c/runs/c6ae0315-cf94-4e83-b719-68b8b99438f4/workspace/open/src/hotspot/share/asm/register.hpp:255), pid=3891560, tid=3891570
      # assert(regs[i] != regs[j]) failed: Multiple uses of register: r19


            Assignee:
            David Simms
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: