8313607: [lworld] runtime/valhalla/inlinetypes/InlineOops.java GenZ assertion on aarch64